--- a/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/EditEmployee.cshtml
@@ -1,15 +1,15 @@
 ﻿@model MODAMS.Models.ViewModels.dtoEmployee
-
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">Create Employee</h1>
+        <h1 class="page-title">Edit Employee</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Employees" asp-action="Index">Employee List</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Create Employee</li>
+            <li class="breadcrumb-item"><a asp-area="Admin" asp-controller="Employees" asp-action="Index">Employee List</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Edit Employee</li>
         </ol>
     </div>
 </div>
@@ -24,7 +24,7 @@
             <div class="card-body p-0">
                 <div class="row p-5 border-bottom">
                     <div class="col-lg-8 col-md-8">
-                        <form method="post" asp-action="CreateEmployee" id="frmEmployee">
+                        <form method="post" asp-action="EditEmployee" id="frmEmployee">
                             <div class="card-body">
                                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                                 <input asp-for="Employee.Id" hidden />
@@ -49,7 +49,7 @@
                                     <div class="col-sm-6">
                                         <div class="mb-3 form-group">
                                             <label asp-for="Employee.Email"></label>
-                                            <input asp-for="Employee.Email" class="form-control" aria-required="true" placeholder="email@unops.org" />
+                                            <input asp-for="Employee.Email" readonly class="form-control" aria-required="true" placeholder="email@unops.org" />
                                             <span asp-validation-for="Employee.Email" class="text-danger"></span>
                                         </div>
                                     </div>
@@ -83,14 +83,16 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="mb-3 form-group">
-                                            <label asp-for="Employee.InitialRole"></label>
-                                            <select asp-for="Employee.InitialRole" asp-items="@Model.RoleList"
+                                            <label asp-for="roleId"></label>
+                                            <select asp-for="roleId" asp-items="@Model.RoleList"
                                                     class="form-control select2 form-select">
+                                                <option disabled selected>-Select Role-</option>
                                             </select>
-                                            <span asp-validation-for="Employee.InitialRole" class="text-danger"></span>
+                                            <span asp-validation-for="roleId" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
+
                                     </div>
                                 </div>
                             </div>
@@ -99,7 +101,6 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="card-body">
                             <div class="profile-img-main rounded" id="profile-image">
-                                
                             </div>
                         </div>
                     </div>
@@ -107,7 +108,7 @@
                 <div class="row p-5">
                     <div class="btn-list">
                         <button id="btnSubmit" class="btn btn-primary"><i class="fe fe-check-circle"></i> Save Employee</button>
-                        <a asp-area="Users" asp-controller="Employees" asp-action="Index" class="btn btn-outline-danger"> <i class="fe fe-x-circle"></i> Cancel</a>
+                        <a asp-area="Admin" asp-controller="Employees" asp-action="Index" class="btn btn-outline-danger"> <i class="fe fe-x-circle"></i> Cancel</a>
                     </div>
                 </div>
             </div>
@@ -118,12 +119,11 @@
 @section scripts {
     <script>
         $(document).ready(() => {
-            $('.select2').select2();
+            $(".select2").select2();
 
-            $("#btnSubmit").on("click", ()=>{
+            $("#btnSubmit").on("click", () => {
                 $("#frmEmployee").submit();
             });
-
 
         });
     </script>
