--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -1,14 +1,4 @@
-﻿@*<div class="row">
-    <div class="col">
-        <h1 class="page-title">Profile</h1>
-        <ol class="breadcrumb float-end">
-            <li class="breadcrumb-item"><a href="javascript:void(0);">Dashboard</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Width</li>
-        </ol>
-    </div>
-</div>
-*@
-<style>
+﻿<style>
     .pnlHeight {
         max-height: 170px;
         min-height: 170px;
@@ -110,7 +100,7 @@
                 <div class="row">
                     <div class="col">
                         <h3 class="mb-2 fw-semibold">Reports</h3>
-                        <p class="text-muted fs-13 mb-0">PAMS Reporting</p>
+                        <p class="text-muted fs-13 mb-0">Reporting</p>
                     </div>
                     <div class="col col-auto top-icn dash">
                         <div class="counter-icon bg-warning dash ms-auto box-shadow-primary">
