--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -69,7 +69,7 @@
                                         <td class="text-muted fs-15 fw-semibold">@department.ULDeptName</td>
                                         <td class="text-muted fs-15 fw-semibold">
                                             @{
-                                                if (department.OwnerName!="Vacant")
+                                                if (department.OwnerName != "Vacant")
                                                 {
                                                     <span class="text-primary">
                                                         <span class="mb-0 mt-1 badge rounded-pill bg-primary-transparent text-blue">@department.OwnerName</span>
@@ -83,22 +83,35 @@
                                                 }
                                             }
                                         </td>
-                                        </td>
                                         <td>
                                             @{
                                                 if (department.Name != "Ministry of Defense")
                                                 {
                                                     <div class="d-flex align-items-stretch">
+                                                        <a href="#" class="btn btn-sm btn-outline-info border me-2" data-bs-toggle="tooltip" data-bs-original-title="Department Info">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 20">
+                                                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                                                <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                                                            </svg>
+                                                        </a>
                                                         <a asp-controller="Departments" asp-action="EditDepartment" asp-route-id="@department.Id" class="btn btn-sm btn-outline-primary border me-2" data-bs-toggle="tooltip" data-bs-original-title="Edit Department">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 20">
                                                                 <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
                                                             </svg>
                                                         </a>
+                                                        <a asp-controller="Departments" asp-action="DepartmentHeads" asp-route-id="@department.Id" class="btn btn-sm btn-outline-warning border me-2">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
+                                                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                                                <circle cx="9" cy="7" r="4"></circle>
+                                                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                                            </svg>
+                                                        </a>
                                                     </div>
-                                                
+
                                                 }
                                             }
-                                            
+
                                         </td>
                                     </tr>
                                 }
@@ -122,6 +135,8 @@
                     sSearch: '',
                 }
             });
+
         });
+
     </script>
 }
