added categories, subcategories and donors

--- a/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
@@ -82,7 +82,7 @@
                                                 </a>
                                             </div>
                                             <div class="col d-flex">
-                                                <a asp-area="" asp-page="/Products/Index" class="dropdown-menu-item text-muted source-logo-container">
+                                                <a asp-area="Admin" asp-controller="Donors" asp-action="Index" class="dropdown-menu-item text-muted source-logo-container">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-bank" viewBox="0 0 16 16">
                                                         <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z" />
                                                     </svg>
@@ -92,41 +92,55 @@
                                         </div>
                                         <div class="row mb-2">
                                             <div class="col d-flex">
-                                                <a href="#" class="dropdown-menu-item text-muted source-logo-container">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="source-logo" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M12.1124268,2.0010986C7.6941528,1.9389648,4.0620728,5.4703979,4,9.8886719c0,5.4482422,7.3642578,11.7285156,7.6777344,11.9931641C11.7677002,21.958313,11.881958,22.0001831,12,22c0.118042,0.0001831,0.2322998-0.041687,0.3222656-0.1181641C12.6357422,21.6171875,20,15.3369141,20,9.8886719C19.9391479,5.5579224,16.4431763,2.0619507,12.1124268,2.0010986z M12,20.8339844C10.5839844,19.5625,5,14.2666016,5,9.8886719C5.0353394,6.0553589,8.166626,2.973877,12,3c3.833374-0.026123,6.9647217,3.0553589,7,6.8886719C19,14.2626953,13.414978,19.5615234,12,20.8339844z M12,7c-1.6568604,0-3,1.3431396-3,3s1.3431396,3,3,3c1.6561279-0.0018311,2.9981689-1.3438721,3-3C15,8.3431396,13.6568604,7,12,7z M12,12c-1.1045532,0-2-0.8954468-2-2s0.8954468-2,2-2c1.1040039,0.0014038,1.9985962,0.8959961,2,2C14,11.1045532,13.1045532,12,12,12z" /></svg>
-                                                    <span class="mt-1">Maps</span>
+                                                <a asp-area="Admin" asp-controller="Categories" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-journals" viewBox="0 0 16 16">
+                                                        <path d="M5 0h8a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2 2 2 0 0 1-2 2H3a2 2 0 0 1-2-2h1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1H1a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v9a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1H3a2 2 0 0 1 2-2z" />
+                                                        <path d="M1 6v-.5a.5.5 0 0 1 1 0V6h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V9h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 2.5v.5H.5a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1H2v-.5a.5.5 0 0 0-1 0z" />
+                                                    </svg>
+                                                    <span class="mt-1">Categories</span>
                                                 </a>
                                             </div>
                                             <div class="col d-flex p-0">
-                                                <a asp-area="" asp-page="/Calendar2/Index" class="dropdown-menu-item text-muted source-logo-container">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="source-logo" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M19.5,4h-3V2.5C16.5,2.223877,16.276123,2,16,2s-0.5,0.223877-0.5,0.5V4h-7V2.5C8.5,2.223877,8.276123,2,8,2S7.5,2.223877,7.5,2.5V4H4.4995117c-1.380127,0.0014648-2.4985352,1.119873-2.5,2.5v13c0.0014648,1.380127,1.119873,2.4985352,2.5,2.5H19.5c1.380188-0.0012817,2.4987183-1.119812,2.5-2.5v-13C21.9987183,5.119812,20.880188,4.0012817,19.5,4z M21,19.5c-0.0009155,0.828064-0.671936,1.4990845-1.5,1.5H4.4995117c-0.828064-0.0009155-1.4990845-0.671936-1.5-1.5V11H21V19.5z M21,10H2.9995117V6.5c0.0009155-0.828064,0.671936-1.4990845,1.5-1.5H7.5v1.5c0,0.0001831,0,0.0003662,0,0.0006104C7.5001831,6.7765503,7.723999,7.0001831,8,7c0.0001831,0,0.0003662,0,0.0006104,0C8.2765503,6.9998169,8.5001831,6.776001,8.5,6.5V5h7v1.5c0,0.0001831,0,0.0003662,0,0.0006104C15.5001831,6.7765503,15.723999,7.0001831,16,7c0.0001831,0,0.0003662,0,0.0006104,0C16.2765503,6.9998169,16.5001831,6.776001,16.5,6.5V5h3c0.828064,0.0009155,1.4990845,0.671936,1.5,1.5V10z" /></svg>
-                                                    <span class="mt-1">Calendar</span>
+                                                <a asp-area="Users" asp-controller="Stores" asp-action="Index" class="dropdown-menu-item text-muted source-logo-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-archive" viewBox="0 0 16 16">
+                                                        <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                                                    </svg>
+                                                    <span class="mt-1">Stores</span>
                                                 </a>
                                             </div>
                                             <div class="col d-flex">
-                                                <a asp-area="" asp-page="/MailInbox/Index" class="dropdown-menu-item text-muted source-logo-container">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="source-logo" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M19.5,4h-15C3.119812,4.0012817,2.0012817,5.119812,2,6.5v11c0.0012817,1.380188,1.119812,2.4987183,2.5,2.5h15c1.380188-0.0012817,2.4987183-1.119812,2.5-2.5v-11C21.9987183,5.119812,20.880188,4.0012817,19.5,4z M21,17.5c-0.0009155,0.828064-0.671936,1.4990845-1.5,1.5h-15c-0.828064-0.0009155-1.4990845-0.671936-1.5-1.5V8.0913696l8.7392578,5.3353882c0.0080566,0.0048828,0.0184326,0.0030518,0.0266724,0.0075073C11.836731,13.4725952,11.9138184,13.500061,12,13.5c0.0905762,0.000061,0.1763306-0.0263672,0.2519531-0.0707397c0.0026855-0.0015869,0.0061646-0.0008545,0.0087891-0.0025024L21,8.0913696V17.5z M21,6.9194946l-0.2387695,0.145752c-0.0070801,0.0038452-0.0150146,0.0037842-0.0219727,0.0079956l-8.7313843,5.3359985L12,12.4140625l-0.0078735-0.0048218L3.2607422,7.0732422C3.2603149,7.072998,3.2598877,7.0727539,3.2594604,7.0724487c-0.006958-0.0042114-0.0149536-0.0041504-0.0220337-0.0079956L3,6.9194946V6.5C3.0009155,5.671936,3.671936,5.0009155,4.5,5h15c0.828064,0.0009155,1.4990845,0.671936,1.5,1.5V6.9194946z" /></svg>
-                                                    <span class="mt-1">Inbox</span>
+                                                <a asp-area="Users" asp-controller="Transfers" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-arrow-left-right" viewBox="0 0 16 16">
+                                                        <path fill-rule="evenodd" d="M1 11.5a.5.5 0 0 0 .5.5h11.793l-3.147 3.146a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 11H1.5a.5.5 0 0 0-.5.5zm14-7a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H14.5a.5.5 0 0 1 .5.5z" />
+                                                    </svg>
+                                                    <span class="mt-1">Transfers</span>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="row mb-2">
                                             <div class="col d-flex">
-                                                <a asp-area="" asp-page="/Chat/Index" class="dropdown-menu-item text-muted source-logo-container">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="source-logo" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M18.5,2h-13C4.119812,2.0012817,3.0012817,3.119812,3,4.5v12c0.0012817,1.380188,1.119812,2.4987183,2.5,2.5h3.2930298l2.8534546,2.8535156C11.7401123,21.9474487,11.8673706,22.0001831,12,22c0.1326294,0.0001221,0.2598267-0.0525513,0.3535156-0.1464844L15.2069702,19H18.5c1.380188-0.0012817,2.4987183-1.119812,2.5-2.5v-12C20.9987183,3.119812,19.880188,2.0012817,18.5,2z M20,16.5c-0.0009155,0.828064-0.671936,1.4990845-1.5,1.5H15c-0.1326294,0-0.2597656,0.0526733-0.3535156,0.1464844L12,20.7929688l-2.6464844-2.6464844C9.2597656,18.0526733,9.1326294,18,9,18H5.5c-0.828064-0.0009155-1.4990845-0.671936-1.5-1.5v-12C4.0009155,3.671936,4.671936,3.0009155,5.5,3h13c0.828064,0.0009155,1.4990845,0.671936,1.5,1.5V16.5z" /></svg>
-                                                    <span class="mt-1">Chat</span>
+                                                <a asp-area="Users" asp-controller="Verifications" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-list-check" viewBox="0 0 16 16">
+                                                        <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
+                                                    </svg>
+                                                    <span class="mt-1">Verifications</span>
                                                 </a>
                                             </div>
                                             <div class="col d-flex p-0">
-                                                <a href="#" class="dropdown-menu-item text-muted source-logo-container">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="source-logo" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M19,5h-6.1396484l-0.3163452-0.9492188C12.1364746,2.8253784,10.989624,1.9989014,9.6982422,2H5C3.3438721,2.0018311,2.0018311,3.3438721,2,5v13c0.0018311,1.6561279,1.3438721,2.9981689,3,3h14c1.6561279-0.0018311,2.9981689-1.3438721,3-3V8C21.9981689,6.3438721,20.6561279,5.0018311,19,5z M21,18c-0.0014038,1.1040039-0.8959961,1.9985962-2,2H5c-1.1040039-0.0014038-1.9985962-0.8959961-2-2V5c0.0014038-1.1040039,0.8959961-1.9985962,2-2h4.6982422c0.8607788-0.0007324,1.6251831,0.550293,1.8964844,1.3671875l0.4306641,1.2910156C12.09375,5.8622437,12.28479,5.9998169,12.5,6H19c1.1040039,0.0014038,1.9985962,0.8959961,2,2V18z" /></svg>
-                                                    <span class="mt-1">Files</span>
+                                                <a asp-area="Users" asp-controller="Stores" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="source-logo">
+                                                        <g> <path fill="none" d="M0 0H24V24H0z" /> <path d="M19.562 12.098l1.531 2.652c.967 1.674.393 3.815-1.28 4.781-.533.307-1.136.469-1.75.469H16v2l-5-3.5 5-3.5v2h2.062c.088 0 .174-.023.25-.067.213-.123.301-.378.221-.601l-.038-.082-1.531-2.652 2.598-1.5zM7.737 9.384l.53 6.08-1.73-1-1.032 1.786c-.044.076-.067.162-.067.25 0 .245.177.45.41.492l.09.008H9v3H5.938c-1.933 0-3.5-1.567-3.5-3.5 0-.614.162-1.218.469-1.75l1.031-1.786-1.732-1 5.53-2.58zm6.013-6.415c.532.307.974.749 1.281 1.281l1.03 1.786 1.733-1-.53 6.08-5.532-2.58 1.732-1-1.031-1.786c-.044-.076-.107-.14-.183-.183-.213-.123-.478-.072-.631.11l-.052.073-1.53 2.652-2.599-1.5 1.53-2.652c.967-1.674 3.108-2.248 4.782-1.281z" /> </g>
+                                                    </svg>
+                                                    <span class="mt-1">Disposals</span>
                                                 </a>
                                             </div>
                                             <div class="col d-flex">
-                                                <a asp-area="" asp-page="/Products/Index" class="dropdown-menu-item text-muted source-logo-container">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" class="source-logo" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M22,2H1.9993896C1.7234497,2.0001831,1.4998169,2.223999,1.5,2.5v4c0.0009766,1.0394897,0.6361694,1.9294434,1.5390625,2.3065796C3.0140381,8.8660889,3,8.9313965,3,9v12.5005493C3.0001831,21.7765503,3.223999,22.0001831,3.5,22h17.0006104C20.7765503,21.9998169,21.0001831,21.776001,21,21.5V9c0-0.0686035-0.0140381-0.1339111-0.0390625-0.1934204C21.8638306,8.4294434,22.4990234,7.5394897,22.5,6.5V2.4993896C22.4998169,2.2234497,22.276001,1.9998169,22,2z M14.5,3h3v3.5C17.5,7.3284302,16.8284302,8,16,8s-1.5-0.6715698-1.5-1.5V3z M10.5,3h3v3.5C13.5,7.3284302,12.8284302,8,12,8s-1.5-0.6715698-1.5-1.5V3z M6.5,3h3v3.5C9.5,7.3284302,8.8284302,8,8,8S6.5,7.3284302,6.5,6.5V3z M2.5,6.5V3h3v3.5C5.5,7.3284302,4.8284302,8,4,8S2.5,7.3284302,2.5,6.5z M15,21H9v-5c0-1.6568604,1.3431396-3,3-3s3,1.3431396,3,3V21z M20,21h-4v-5c0-2.2091675-1.7908325-4-4-4s-4,1.7908325-4,4v5H4V9c0.8217163-0.0007935,1.5443726-0.4028931,2-1.0151367C6.4556274,8.5971069,7.1782837,8.9992065,8,9c0.8217163-0.0007935,1.5443726-0.4028931,2-1.0151367C10.4556274,8.5971069,11.1782837,8.9992065,12,9c0.8217163-0.0007935,1.5443726-0.4028931,2-1.0151367C14.4556274,8.5971069,15.1782837,8.9992065,16,9c0.8217163-0.0007935,1.5443726-0.4028931,2-1.0151367C18.4556274,8.5971069,19.1782837,8.9992065,20,9V21z M21.5,6.5C21.5,7.3284302,20.8284302,8,20,8s-1.5-0.6715698-1.5-1.5V3h3V6.5z" /></svg>
-                                                    <span class="mt-1">Shopping</span>
+                                                <a asp-area="Users" asp-controller="Stores" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-printer" viewBox="0 0 16 16">
+                                                        <path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
+                                                        <path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
+                                                    </svg>
+                                                    <span class="mt-1">Reports</span>
                                                 </a>
                                             </div>
                                         </div>
