--- a/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/DepartmentHeads.cshtml
@@ -34,11 +34,14 @@
                         <div class="col-md-8">
                             <div class="form-group">
                                 <label asp-for="EmployeeId" class="form-label"></label>
-                                <select name="EmployeeId" id="EmployeeId" asp-items="@Model.Employees"
-                                        class="form-control select2 form-select">
-                                    <option disabled selected>-Select Employee-</option>
-                                    <option value="0">Vacant</option>"
-                                </select>
+                                <ul>
+                                    <li class="select-client">
+                                        <select name="EmployeeId" id="EmployeeId" asp-items="@Model.Employees"
+                                                class="form-control select2-style1 form-select">
+                                            <option value="0">Vacant</option>
+                                        </select>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -79,7 +82,19 @@
                                     sCounter = (nCounter < 10) ? '0' + nCounter.ToString() : nCounter.ToString();
                                     <tr>
                                         <td class="text-muted fs-15 fw-semibold text-center">@sCounter.</td>
-                                        <td class="text-muted fs-15 fw-semibold">@dh.Employee.FullName</td>
+                                        <td class="text-muted fs-15 fw-semibold">
+                                            <div class="d-flex align-items-center">
+                                                <div class="me-2">
+                                                    <span>
+                                                        <img style="min-width:30px;" src="@dh.Employee.ImageUrl" alt="profile-user" class="data-image avatar avatar-lg rounded-circle">
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <h6 class="mb-0">@dh.Employee.FullName</h6>
+                                                    <span class="text-muted fs-12">@dh.Employee.Email</span>
+                                                </div>
+                                            </div>
+                                        </td>
                                         <td class="text-muted fs-15 fw-semibold">@dh.StartDate.ToString("dd-MMM-yyyy")</td>
                                         <td class="text-muted fs-15 fw-semibold">@dh.EndDate?.ToString("dd-MMM-yyyy")</td>
                                         <td class="text-muted fs-15 fw-semibold">@dh.IsActive</td>
@@ -94,11 +109,13 @@
             </div>
         </div>
     </div>
-
+    <section id="dvFacesData" style="display:none;"></section>
 
     @section Scripts{
         <script>
             $(document).ready(() => {
+                loadFaces();
+
                 $('#tblDepartmentHeads').DataTable({
                     language: {
                         searchPlaceholder: 'Search...',
@@ -106,9 +123,63 @@
                     }
                 });
 
-                $('.select2').select2({
-                    //dropdownParent: $("#mdlDepartmentHeads")
-                });
+                //$('.select2').select2({
+                //    //dropdownParent: $("#mdlDepartmentHeads")
+                //});
+
+                
             });
+
+            const loadFaces = () => {
+                var postData = {};
+                $.ajax({
+                    url: '/Admin/Employees/GetFaces',
+                    datatype: "json",
+                    data: postData,
+                    beforeSend: function () {
+
+                    },
+                    success: function (e) {
+                        $("#dvFacesData").html("").html(e);
+                    },
+                    complete: function () {
+                        setSelect2();
+                    }
+                });
+            }
+            const setSelect2 = ()=>{
+                $(".select2-style1").select2({
+                    templateResult: select2Style1,
+                    templateSelection: select2Style1,
+                    escapeMarkup: function (m) { return m; }
+                });
+            }
+
+            function select2Style1(data) {
+                if (!data.id) { return data.text; }
+                console.log(data.text);
+                var $data = $(
+                    '<span>' + getFace(data.element.value.toLowerCase()) + data.text + '</span>'
+                );
+                return $data;
+            };
+
+            const getFace = (id) => {
+                console.log("face id: " + id);
+                var sFace = '<img src="/assets/images/faces/profile_placeholder.png" class="rounded-circle avatar-sm" />';
+
+                var sData = $("#dvFacesData").html();
+                if (sData != "No Records Found") {
+                    var Data = JSON.parse(sData);
+                    Data.forEach((e) => {
+                        if (id == e.Id) {
+                            sFace = '<img src="' + e.ImageUrl + '" class="rounded-circle avatar-sm" />';
+                        }
+                    });
+                }
+                console.log(sFace);
+                return sFace;
+            }
+
         </script>
     }
